Fixed Bugs in Input

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 960px;
+  min-height: 150px;
+  border: 1px solid #333;
+  padding: 30px;
+  margin: 30px auto;
+  overflow: auto;
+  border-radius: 8px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.timing-select {
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid steelblue;
+}
+
+.m-5 {
+  margin: 5px;
+}
+
+.p-5 {
+  padding: 5px;
+}
+
+.btn {
+  padding: 7px 10px;
+  background-color: transparent;
+  color: steelblue;
+  border: 1px solid steelblue;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  color: white;
+  background-color: steelblue;
+}
+
+.form-control {
+  width: 100%;
+  height: 45px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
 }
